# quaint

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  README.md  aliases.js  crates.js  docker-compose.yml  help.html  index.html  rustdoc.css  search-index.js  settings.html  source-files.js
.buildkite/: docker.sh
.github/workflows/: test.yml
db/: test.db
examples/: pg.rs  pooled.rs
implementors/failure/: trait.Fail.js
implementors/postgres_types/: trait.FromSql.js  trait.ToSql.js
implementors/prisma_query/: trait.Connectional.js
implementors/r2d2/: trait.ManageConnection.js
prisma_query/: all.html  comparable.m.html  index.html  macro.comparable.html  sidebar-items.js  struct.ColumnNames.html  struct.ResultRow.html  struct.ResultRowRef.html  struct.ResultRowWithName.html  struct.ResultSet.html  struct.ResultSetIterator.html  struct.Row.html  trait.Connectional.html  trait.ToResultRow.html  trait.ToRow.html  trait.Transaction.html  trait.Transactional.html  trait.ValueIndex.html  type.QueryResult.html  type.Result.html
prisma_query/ast/: Comparable.t.html  Compare.t.html  ConditionTree.t.html  Conjuctive.t.html  Distinct.t.html  Insert.t.html  Join.t.html  JoinData.t.html  Joinable.t.html  MultiRowInsert.t.html  OnConflict.t.html  Order.t.html  Query.t.html  TableType.t.html  asterisk.v.html  enum.Compare.html  enum.ConditionTree.html  enum.DatabaseValue.html  enum.Expression.html  enum.Function.html  enum.FunctionType.html  enum.Id.html  enum.Join.html  enum.OnConflict.html  enum.Order.html  enum.ParameterizedValue.html  enum.Query.html  enum.TableType.html  fn.aggregate_to_string.html  fn.asterisk.html  fn.count.html  fn.distinct.html  fn.row_number.html  index.html  sidebar-items.js  struct.AggregateToString.html  struct.Column.html  struct.Count.html  struct.Delete.html  struct.Distinct.html  (+25 more)
prisma_query/connector/: enum.ConnectionLike.html  enum.SslAcceptMode.html  index.html  sidebar-items.js  struct.ColumnNames.html  struct.DBIO.html  struct.Mysql.html  struct.MysqlParams.html  struct.Params.html  struct.PostgreSql.html  struct.PostgresParams.html  struct.ResultRow.html  struct.ResultRowRef.html  struct.ResultSet.html  struct.ResultSetIterator.html  struct.Row.html  struct.Sqlite.html  struct.SqliteParams.html  struct.SslParams.html  struct.Transaction.html  trait.Connectional.html  trait.Database.html  trait.LikeMysqlConnection.html  trait.LikeSqliteConnection.html  trait.Queryable.html  trait.ToColumnNames.html  trait.ToRow.html  trait.Transaction.html  trait.Transactional.html  trait.ValueIndex.html
prisma_query/error/: enum.Error.html  index.html
prisma_query/pool/: fn.mysql.html  fn.postgres.html  fn.sqlite.html  index.html  sidebar-items.js  struct.CheckOut.html  struct.MysqlManager.html  struct.Pool.html  struct.PostgresManager.html  struct.PrismaConnectionManager.html  struct.SqliteManager.html  trait.Manage.html
prisma_query/result_set/: struct.ResultRowRef.html  struct.ResultRowWithName.html  struct.ResultSet.html  struct.ResultSetIterator.html  trait.ValueIndex.html
prisma_query/transaction/: struct.ColumnNames.html  struct.ResultRow.html  struct.Row.html  trait.Connectional.html  trait.ToResultRow.html  trait.ToRow.html  trait.Transaction.html  trait.Transactional.html
prisma_query/visitor/: Sqlite.t.html  index.html  sidebar-items.js  struct.Mysql.html  struct.Postgres.html  (+2 more)
quaint/: all.html  enum.Value.html  index.html  macro.col!.html  macro.col.html  macro.val!.html  macro.val.html  macro.values!.html  macro.values.html  sidebar-items.js  struct.PooledConnection.html  struct.Quaint.html  type.Result.html
src/: ast.rs  connector.rs  error.rs  lib.rs  macros.rs  pool.rs  pooled.rs  serde.rs  single.rs  visitor.rs
static.files/: rustdoc-a4c7ec2e5b837b95.css  rustdoc-db31c186d1e4862c.css
(+701 files in other folders)
