[package]
name = "quaint"
version = "0.2.0-alpha.13"
authors = [
    "Julius de Bruijn <bruijn@prisma.io>",
    "Katharina Fey <kookie@spacekookie.de>",
    "Tom Houlé <tom@tomhoule.com>",
    "Emanuel Jöbstl <emanuel.joebstl@gmail.com>",
    "Matthias Oertel <oertel@prisma.io>",
    "Dominic Petrick <petrick@prisma.io>",
]
edition = "2018"
readme  = "README.md"
license = "Apache-2.0"
description = "An abstraction layer for SQL databases."
repository  = "https://github.com/prisma/quaint/"
homepage    = "https://github.com/prisma/quaint/"
keywords    = ["mysql", "postgresql", "sqlite", "sql"]
documentation = "https://docs.rs/quaint/"

[package.metadata.docs.rs]
features = [ "full", "serde-support", "json-1", "uuid-0_8", "chrono-0_4", "array" ]

[features]
default = []

full = ["pooled", "json-1", "postgresql", "uuid-0_8", "chrono-0_4", "mysql", "mssql", "sqlite"]
full-postgresql = ["pooled", "postgresql", "json-1", "uuid-0_8", "chrono-0_4", "array"]
full-mysql = ["pooled", "mysql", "json-1", "uuid-0_8", "chrono-0_4"]
full-sqlite = ["pooled", "sqlite", "json-1", "uuid-0_8", "chrono-0_4"]
full-mssql = ["pooled", "mssql"]

single = [ "json-1", "postgresql", "uuid-0_8", "chrono-0_4", "mysql", "mssql", "sqlite"]
single-postgresql = ["postgresql", "json-1", "uuid-0_8", "chrono-0_4", "array"]
single-mysql = ["mysql", "json-1", "uuid-0_8", "chrono-0_4"]
single-sqlite = ["sqlite", "json-1", "uuid-0_8", "chrono-0_4"]
single-mssql = ["mssql"]

postgresql = [
    "sqlx/postgres",
    "array",
    "bytes",
    "bit-vec",
    "ipnetwork"
]

pooled = ["mobc"]
sqlite = ["sqlx/sqlite"]
json-1 = ["serde_json", "base64"]
uuid-0_8 = ["uuid", "sqlx/uuid"]
chrono-0_4 = ["chrono"]
mysql = ["sqlx/mysql"]
mssql = ["tiberius", "uuid-0_8", "chrono-0_4"]
tracing-log = ["tracing", "tracing-core"]
array = []
serde-support = ["serde", "chrono/serde"]

runtime-tokio = ["tokio", "tokio-util", "sqlx/runtime-tokio", "tiberius/sql-browser-tokio", "mobc/tokio"]
runtime-async-std = ["async-std", "sqlx/runtime-async-std", "tiberius/sql-browser-async-std", "mobc/async-std"]

[dependencies]
url = "2.1"
metrics = "0.12"
percent-encoding = "2"
once_cell = "1.3"
num_cpus = "1.12"
rust_decimal = "1.7"
futures = "0.3"
thiserror = "1.0"
async-trait = "0.1"
hex = "0.4"
bigdecimal = "0.1"

uuid = { version = "0.8", optional = true }
chrono = { version = "0.4", optional = true }
serde_json = { version = "1.0.48", optional = true }
base64 = { version = "0.11.0", optional = true }
lru-cache = { version = "0.1", optional = true }

log = { version = "0.4", features = ["release_max_level_trace"] }
tracing = { version = "0.1", optional = true }
tracing-core = { version = "0.1", optional = true }

mobc = { version = "0.5.7", optional = true, default-features = false, features = ["unstable"] }
bytes = { version = "0.5", optional = true }
tokio = { version = "0.2", features = ["rt-threaded", "macros", "sync"], optional = true}
tokio-util = { version = "0.3", features = ["compat"], optional = true }
async-std = { version = "1.6.2", optional = true }
serde = { version = "1.0", optional = true }
bit-vec = { version = "0.6.1", optional = true }
ipnetwork = { version = "0.16.0", optional = true }
either = "1.5.3"

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros"]}
serde = { version = "1.0", features = ["derive"] }
indoc = "0.3"
names = "0.11"
test-macros = { path = "test-macros" }
test-setup = { path = "test-setup" }
paste = "1.0"

[dependencies.tiberius]
version = "0.4"
optional = true
features = ["rust_decimal", "chrono"]

[dependencies.sqlx]
path = "../sqlx"
default_features = false
features = ["decimal", "json", "chrono", "ipnetwork", "bit-vec"]
optional = true
